test/fail_compilation/fail7369.d
struct S7369 {
    int a;
    invariant() const { a += 5; }
}

